# youbot

./: .gitmodules  LICENSE  README.md
youbot_control/: CMakeLists.txt  README.md  package.xml
youbot_control/config/: control_arm.yaml  control_base.yaml  youbot-ethercat.cfg
youbot_control/include/youbot_control/: YouBotElementHW.h  YouBotHW.h
youbot_control/launch/: youbot_driver_interface.launch
youbot_control/param/: youbot_arm_controllers.yaml
youbot_control/scripts/: example.py
youbot_control/src/: YouBotElementHW.cpp  YouBotHW.cpp  YouBotRosWrapper.cpp  yuobot_hw_node.cpp
youbot_description/robots/: youbot.urdf  youbot_tpu_arm_only.urdf  youbot_tpu_real.urdf  youbot_tpu_real.urdf.xacro
youbot_description/urdf/: materials.urdf.xacro
youbot_description/urdf/youbot_arm/: arm.urdf.xacro  limits.urdf.xacro
youbot_driver_interface/: CMakeLists.txt  package.xml
youbot_driver_interface/config/: control.yaml
youbot_driver_interface/include/youbot_driver_interface/: YouBotArmWrapper.h  YouBotBaseHW.h  YouBotBaseWrapper.h  YouBotConfiguration.h  YouBotDriverWrapper.h  YouBotHW.h  YouBotRosWrapper.h  dYouBotRosWrapper.h
youbot_driver_interface/launch/: youbot_driver_interface.launch
youbot_driver_interface/param/: youbot_configuration.yaml
youbot_driver_interface/src/: YouBotArmWrapper.cpp  YouBotBaseWrapper.cpp  YouBotConfiguration.cpp  YouBotDriverWrapper.cpp  YouBotHW.cpp  YouBotRosWrapper.cpp  dYouBotRosWrapper.cpp  test.cpp  youbot_node.cpp  yuobot_hw_node.cpp
